cleanup jdk preview settings
Signed-off-by: Stefan Bischof <stbischof@bipolis.org>