@@ -9,7 +9,7 @@
 	</parent>
 	<artifactId>org.eclipse.daanse.demo.server.play</artifactId>
   <properties>
-    <maven-failsafe-plugin.argLine>--enable-preview -Duser.language=en -Duser.country=US</maven-failsafe-plugin.argLine>
+    <maven-failsafe-plugin.argLine>-Duser.language=en -Duser.country=US</maven-failsafe-plugin.argLine>
   </properties>
 	<build>
 		<plugins>
